Making some changes

--- a/House_Price_Predcition_Kaagle/House_Price_Prediction_NN_Kaagle.ipynb
+++ b/House_Price_Predcition_Kaagle/House_Price_Prediction_NN_Kaagle.ipynb
@@ -1581,35 +1581,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "torch.Size([128, 304])\n(128,)\n[0.08200546 0.32489297 0.03208908 0.18808284 0.20624042 0.21598715\n 0.15062323 0.11589066 0.2577632  0.43961164 0.12006513 0.12321267\n 0.20182946 0.15006793 0.4650762  0.14168435 0.26607937 0.16961351\n 0.19917986 0.14841121 0.41014892 0.10934999 0.6556532  0.15949196\n 0.07931717 0.0402749  0.11616027 0.15789038 0.17877275 0.1893534\n 0.09288885 0.23686016 0.30342984 0.5742639  0.2297684  0.17413226\n 0.18977702 0.10325087 0.22575918 0.16597435 0.12819174 0.22743022\n 0.345457   0.15359905 0.23392433 0.2338658  0.17512712 0.24233341\n 0.20441419 0.2533162  0.14342225 0.24041703 0.21742058 0.15728855\n 0.09748613 0.14452654 0.07152474 0.18191513 0.1570935  0.11114929\n 0.26347733 0.29248634 0.42123985 0.16694936 0.22800475 0.12501091\n 0.01611444 0.48871803 0.31252664 0.2696155  0.4151984  0.15008482\n 0.1589258  0.27885738 0.14958    0.06878088 0.09873565 0.09579097\n 0.3340856  0.09407721 0.28761193 0.5251891  0.24969542 0.30986547\n 0.32988533 0.10863479 0.20706937 0.15587825 0.24025276 0.09104621\n 0.27499518 0.51522106 0.1294699  0.3212007  0.20274776 0.10849518\n 0.11148692 0.28288645 0.14513358 0.55535334 0.23350778 0.17206296\n 0.59285486 0.16456228 0.1944147  0.09975462 0.17136165 0.29233453\n 0.17797396 0.2270281  0.08885492 0.13293627 0.13974887 0.35086617\n 0.24786246 0.6160676  0.11374911 0.08009889 0.12908524 0.23311216\n 0.18148023 0.1512872  0.14381012 0.21697903 0.1846978  0.10895329\n 0.12512568 0.2930453 ]\n"
+      "torch.Size([128, 304])\n(128,)\n[218681.77  108943.73  112456.63  242009.34  440042.4   183003.48\n 211521.39  164882.5   185274.6   223463.89  114621.85  232953.11\n 167316.86  179684.67  172143.3   209404.3   131107.73  150283.28\n 275243.72  241282.67   57081.098 128752.86  256107.56  198935.77\n 203163.11  119404.766  50702.13  403725.47  342445.62  132432.56\n 135732.45  133703.45  143775.6   210749.31  217312.98  165782.06\n 410531.4   222093.62  119607.375 389282.5   153504.02  169336.95\n 144762.61  156142.05  130244.61  186096.58  138812.95   81220.016\n 392291.84   55079.73  123160.95  413088.66  158078.08  115489.484\n 237856.38  301603.25  159806.39  163125.94  198886.64  174469.62\n 162835.31  389335.8   206351.75   58858.754 225625.52   95286.23\n 129103.79  203844.2   289328.28  113851.23  162983.53  315197.94\n 193946.67  126980.15   96964.    134655.02  119571.36  414858.53\n 166984.56  244153.1   123625.45  182212.81  217630.77  350254.28\n 278733.75  163630.27  146057.34  243698.06  335509.1   150906.92\n 143740.31  282554.25   75123.46  122986.09  115312.95  318639.28\n 124264.6   121827.1   107954.7   175045.61  355263.88  194667.45\n 195003.84  148596.86  197862.77  146258.66  137841.64  148023.03\n  62431.992 164710.83  179446.81  122042.36  203374.88  171938.22\n 208855.58  179511.86  272308.16  137966.03  118917.484  81017.89\n 148163.48  112625.09  161900.05  113127.92  182033.5   119045.05\n 122124.45   58723.973]\n"
      ]
     }
    ],
    "source": [
-    "def scaling_inverse(y_predicted):\n",
+    "def get_train_scaler():\n",
     "    scaler_train = MinMaxScaler()\n",
     "    df_train = pd.read_csv('data/train.csv').rename(columns={'SalePrice': 'label'})\n",
     "    y_train = df_train['label'].values.copy()\n",
     "    y_train.shape = (-1, 1)\n",
     "    scaler_train.fit(y_train)\n",
-    "    y_predicted.shape = (-1,1)\n",
-    "    return scaler_train.inverse_transform(y_predicted)\n",
+    "    return scaler_train\n",
     "\n",
-    "def predict(model, feat):\n",
+    "def scale_inverse(y_predicted, scaler):\n",
+    "    y_predicted = y_predicted.cpu().numpy()\n",
+    "    y_predicted.shape = (-1,1)\n",
+    "    return scaler_train.inverse_transform(y_predicted).flatten()\n",
+    "\n",
+    "def predict(model, feat, scaler_train=get_train_scaler()):\n",
     "    model.eval() # prepare model for evaluation\n",
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    # To speed up calculations, forget the gradients, etc.\n",
     "    with torch.no_grad():\n",
     "        x = data['features'].to(device)\n",
     "        output = model(x)\n",
-    "        return output.cpu().numpy()\n",
+    "        output = scale_inverse(output, scaler_train)\n",
+    "        return output\n",
     "\n",
     "# Reading the model parameters saved\n",
     "for data in iter(dataloader['test']):\n",
@@ -1620,21 +1625,6 @@
     "    print(y_predicted.shape)\n",
     "    print(y_predicted)\n",
     "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler_train = MinMaxScaler()\n",
-    "df_train = pd.read_csv('data/train.csv').rename(columns={'SalePrice': 'label'})\n",
-    "y_train = df_train['label'].values.copy()\n",
-    "y_train.shape = (-1, 1)\n",
-    "scaler_train.fit(y_train)\n",
-    "y_predicted.shape = (-1,1)\n",
-    "y_final = scaler_train.inverse_transform(y_predicted)"
    ]
   },
   {
