--- a/House_Price_Predcition_Kaagle/House_Price_Prediction_NN_Kaagle.ipynb
+++ b/House_Price_Predcition_Kaagle/House_Price_Prediction_NN_Kaagle.ipynb
@@ -1581,15 +1581,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "torch.Size([128, 304])\n(128,)\n[218681.77  108943.73  112456.63  242009.34  440042.4   183003.48\n 211521.39  164882.5   185274.6   223463.89  114621.85  232953.11\n 167316.86  179684.67  172143.3   209404.3   131107.73  150283.28\n 275243.72  241282.67   57081.098 128752.86  256107.56  198935.77\n 203163.11  119404.766  50702.13  403725.47  342445.62  132432.56\n 135732.45  133703.45  143775.6   210749.31  217312.98  165782.06\n 410531.4   222093.62  119607.375 389282.5   153504.02  169336.95\n 144762.61  156142.05  130244.61  186096.58  138812.95   81220.016\n 392291.84   55079.73  123160.95  413088.66  158078.08  115489.484\n 237856.38  301603.25  159806.39  163125.94  198886.64  174469.62\n 162835.31  389335.8   206351.75   58858.754 225625.52   95286.23\n 129103.79  203844.2   289328.28  113851.23  162983.53  315197.94\n 193946.67  126980.15   96964.    134655.02  119571.36  414858.53\n 166984.56  244153.1   123625.45  182212.81  217630.77  350254.28\n 278733.75  163630.27  146057.34  243698.06  335509.1   150906.92\n 143740.31  282554.25   75123.46  122986.09  115312.95  318639.28\n 124264.6   121827.1   107954.7   175045.61  355263.88  194667.45\n 195003.84  148596.86  197862.77  146258.66  137841.64  148023.03\n  62431.992 164710.83  179446.81  122042.36  203374.88  171938.22\n 208855.58  179511.86  272308.16  137966.03  118917.484  81017.89\n 148163.48  112625.09  161900.05  113127.92  182033.5   119045.05\n 122124.45   58723.973]\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "      MSZoning_C (all)  MSZoning_FV  MSZoning_RH  MSZoning_RL  MSZoning_RM  \\\n",
+       "0                  0.0          0.0          1.0          0.0          0.0   \n",
+       "1                  0.0          0.0          0.0          1.0          0.0   \n",
+       "2                  0.0          0.0          0.0          1.0          0.0   \n",
+       "3                  0.0          0.0          0.0          1.0          0.0   \n",
+       "4                  0.0          0.0          0.0          1.0          0.0   \n",
+       "...                ...          ...          ...          ...          ...   \n",
+       "1451               0.0          0.0          0.0          1.0          0.0   \n",
+       "1452               0.0          0.0          0.0          0.0          1.0   \n",
+       "1455               0.0          0.0          0.0          0.0          1.0   \n",
+       "1456               0.0          0.0          0.0          1.0          0.0   \n",
+       "1458               0.0          0.0          0.0          1.0          0.0   \n",
+       "\n",
+       "      Street_Grvl  Street_Pave  Alley_Grvl  Alley_Pave  Alley_nan  ...  \\\n",
+       "0             0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "1             0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "2             0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "3             0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "4             0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "...           ...          ...         ...         ...        ...  ...   \n",
+       "1451          0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "1452          0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "1455          0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "1456          0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "1458          0.0          1.0         0.0         0.0        1.0  ...   \n",
+       "\n",
+       "      WoodDeckSF  OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  \\\n",
+       "0       0.163361     0.000000            0.0        0.0         0.25   \n",
+       "1       0.458576     0.065814            0.0        0.0         0.00   \n",
+       "2       0.247375     0.062157            0.0        0.0         0.00   \n",
+       "3       0.420070     0.065814            0.0        0.0         0.00   \n",
+       "4       0.000000     0.149909            0.0        0.0         0.30   \n",
+       "...          ...          ...            ...        ...          ...   \n",
+       "1451    0.186698     0.000000            0.0        0.0         0.00   \n",
+       "1452    0.000000     0.000000            0.0        0.0         0.00   \n",
+       "1455    0.000000     0.043876            0.0        0.0         0.00   \n",
+       "1456    0.553092     0.000000            0.0        0.0         0.00   \n",
+       "1458    0.221704     0.087751            0.0        0.0         0.00   \n",
+       "\n",
+       "      PoolArea   MiscVal    MoSold  YrSold     label  \n",
+       "0          0.0  0.000000  0.454545     1.0 -0.048465  \n",
+       "1          0.0  0.806452  0.454545     1.0 -0.048465  \n",
+       "2          0.0  0.000000  0.181818     1.0 -0.048465  \n",
+       "3          0.0  0.000000  0.454545     1.0 -0.048465  \n",
+       "4          0.0  0.000000  0.000000     1.0 -0.048465  \n",
+       "...        ...       ...       ...     ...       ...  \n",
+       "1451       0.0  0.000000  0.363636     0.0 -0.048465  \n",
+       "1452       0.0  0.000000  1.000000     0.0 -0.048465  \n",
+       "1455       0.0  0.000000  0.272727     0.0 -0.048465  \n",
+       "1456       0.0  0.000000  0.727273     0.0 -0.048465  \n",
+       "1458       0.0  0.000000  0.909091     0.0 -0.048465  \n",
+       "\n",
+       "[1146 rows x 305 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MSZoning_C (all)</th>\n      <th>MSZoning_FV</th>\n      <th>MSZoning_RH</th>\n      <th>MSZoning_RL</th>\n      <th>MSZoning_RM</th>\n      <th>Street_Grvl</th>\n      <th>Street_Pave</th>\n      <th>Alley_Grvl</th>\n      <th>Alley_Pave</th>\n      <th>Alley_nan</th>\n      <th>...</th>\n      <th>WoodDeckSF</th>\n      <th>OpenPorchSF</th>\n      <th>EnclosedPorch</th>\n      <th>3SsnPorch</th>\n      <th>ScreenPorch</th>\n      <th>PoolArea</th>\n      <th>MiscVal</th>\n      <th>MoSold</th>\n      <th>YrSold</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.163361</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.25</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.454545</td>\n      <td>1.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.458576</td>\n      <td>0.065814</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.806452</td>\n      <td>0.454545</td>\n      <td>1.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.247375</td>\n      <td>0.062157</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.181818</td>\n      <td>1.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.420070</td>\n      <td>0.065814</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.454545</td>\n      <td>1.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.000000</td>\n      <td>0.149909</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.30</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1451</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.186698</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.363636</td>\n      <td>0.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>1452</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>0.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>1455</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.000000</td>\n      <td>0.043876</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.272727</td>\n      <td>0.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>1456</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.553092</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.727273</td>\n      <td>0.0</td>\n      <td>-0.048465</td>\n    </tr>\n    <tr>\n      <th>1458</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>...</td>\n      <td>0.221704</td>\n      <td>0.087751</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.00</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.909091</td>\n      <td>0.0</td>\n      <td>-0.048465</td>\n    </tr>\n  </tbody>\n</table>\n<p>1146 rows × 305 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 104
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([112116.73 , 403841.75 , 156216.2  ,  86898.92 , 171072.86 ,\n",
+       "       126916.8  , 222026.67 , 185744.38 , 123538.92 ,  35809.594,\n",
+       "       214705.67 , 177573.23 , 386825.84 , 174898.03 , 202764.06 ,\n",
+       "       202041.55 , 171755.53 , 161847.3  , 242398.62 , 337869.22 ,\n",
+       "        74980.914, 224630.02 , 112934.37 , 197695.55 , 250068.53 ,\n",
+       "       164882.5  , 148822.55 , 168557.31 , 349175.06 , 109891.03 ,\n",
+       "       114938.61 , 138457.67 , 351779.53 ,  97546.125, 169664.27 ,\n",
+       "       132800.06 ,  56847.676, 193946.67 , 109250.95 , 171558.42 ,\n",
+       "       119498.76 , 149210.75 , 179585.81 , 113027.38 , 301171.47 ,\n",
+       "       162983.53 , 199529.25 , 209487.28 , 165583.9  , 229723.58 ,\n",
+       "       232086.73 ,  84146.055, 142875.9  , 407483.62 , 126674.46 ,\n",
+       "        65727.29 , 129522.46 ,  80491.05 , 154227.06 , 204014.98 ,\n",
+       "       325373.38 , 218681.77 , 245590.81 , 440042.4  , 249131.69 ,\n",
+       "       146258.66 , 250722.88 , 160292.64 , 121358.91 , 185175.86 ,\n",
+       "       191918.67 , 202508.53 , 221481.66 , 164471.45 , 310767.12 ,\n",
+       "       159734.7  , 181427.3  , 317949.53 , 122211.74 , 157788.28 ,\n",
+       "       191278.9  , 144762.61 , 240840.06 , 178816.66 , 176612.83 ,\n",
+       "       254061.28 , 175294.98 , 370963.8  , 309139.25 , 275475.06 ,\n",
+       "        71353.51 , 220950.16 , 138953.8  , 149750.16 , 179511.86 ,\n",
+       "       114764.62 , 253399.83 , 117237.305, 197862.77 , 280675.38 ,\n",
+       "       139246.66 , 141400.19 , 144788.23 , 148195.72 ,  90466.08 ,\n",
+       "       406310.16 , 200941.44 , 179008.98 , 359268.62 , 176879.53 ,\n",
+       "       104784.76 , 382772.12 , 208024.31 , 414858.53 , 131107.73 ,\n",
+       "       136179.53 , 171920.9  , 434809.94 , 233929.9  , 166984.56 ,\n",
+       "       160971.5  , 158078.08 , 340986.38 , 151452.61 , 124264.6  ,\n",
+       "       223463.89 ,  98931.84 , 213310.33 ], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 103
     }
    ],
    "source": [
@@ -1616,15 +1715,15 @@
     "        output = scale_inverse(output, scaler_train)\n",
     "        return output\n",
     "\n",
-    "# Reading the model parameters saved\n",
+    "\n",
+    "final_results = []\n",
     "for data in iter(dataloader['test']):\n",
     "    new_features = data['features']\n",
-    "    print(new_features.shape)\n",
-    "\n",
     "    y_predicted = predict(model, new_features)\n",
-    "    print(y_predicted.shape)\n",
-    "    print(y_predicted)\n",
-    "    break"
+    "    final_results.append(y_predicted)\n",
+    "    break\n",
+    "final_results = np.array(final_results)\n",
+    "final_results.flatten()"
    ]
   },
   {
