Adding rank in competition

--- a/House_Price_Predcition_Kaagle/House_Price_Prediction_NN_Kaagle.ipynb
+++ b/House_Price_Predcition_Kaagle/House_Price_Prediction_NN_Kaagle.ipynb
@@ -1793,6 +1793,16 @@
    "source": [
     "df_submission[['Id', 'SalePrice']].to_csv('data/submission_1.csv', index=False)"
    ]
+  },
+  {
+   "source": [
+    "# Competition Ranking\n",
+    "\n",
+    "Score: 0.43868\n",
+    "Rank: 8211"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
